Fixed two scrollbars bug on quizz-search file

--- a/Prueba2/styles_sheets/search_style.css
+++ b/Prueba2/styles_sheets/search_style.css
@@ -3,11 +3,6 @@
     margin: 0;
 }
 
-body, html {
-    height: 100%;
-    margin: 0;
-}
-
 .head {
     top: 0;
     width: 100%;
